zhu ye add Prof. Li

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   						NEWS&nbsp;新闻</a></h5>
   				</div>
   				<div id="link">
-  					<a href="./Pages/news/somethingAboutMemristor.html" target="_blank">test</a><br>
+  					<a href="./Pages/news/Lixiaohang visiting.html" target="_blank">Prof. Lixiaohang Visit</a><br>
   					
   					<br><br><a class="btn" href="./Pages/news/news_com.html"> More </a>
 				</div>
